[project]
name = "content_agency"
version = "0.1.0"
description = "content-agency using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.10.1",
    "crewai-tools",
]

[project.scripts]
content_agency = "content_agency.main:run"
run_crew = "content_agency.main:run"
train = "content_agency.main:train"
replay = "content_agency.main:replay"
test = "content_agency.main:test"
run_with_trigger = "content_agency.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
